# Synclime

./: .gitignore  LICENCE_APACHE 2.0  README.md  extentions.md  index.html  instructions.md  leakes.txt  package.json  project.structure  tailwind.config.js  tutorial.md  updates.json  why.design
.antigravitycli/: 56c74515-fa08-4f35-b2a8-eee93d05e64d.json
.github/workflows/: publish.yml
src/: App.tsx  index.css  index.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  config.rs  discovery.rs  download.rs  inbox.rs  logs.rs  mod.rs  parse.rs  queue.rs
src-tauri/src/database/: operations.rs
src-tauri/src/engine/: mod.rs  process.rs  structures.rs
src/components/: SplashScreen.tsx
src/components/ui/: SplashScreen.tsx
src/core/: logger.ts
src/core/types/: database.types.ts  index.ts  ytdlp.types.ts
src/features/config/components/: ConfigForm.tsx
src/features/config/hooks/: useProfileSelection.ts
src/features/demo/components/: ZustandDemo.tsx
src/features/downloader/components/: DownloadRow.tsx  LiveLogTerminal.tsx  ProgressWheel.tsx
src/features/downloader/hooks/: useProcessSignals.ts
src/features/navigation/components/: BottomDock.tsx
src/features/parser/components/: ConfigureTrackModal.tsx  HeroCard.tsx  MetaDetailsCard.tsx  ParseButton.tsx  PlaylistView.tsx  SingleVideoView.tsx  SubtitleSelector.tsx
src/features/parser/hooks/: useParseExecution.ts
src/layouts/: BottomDock.tsx  MainLayout.tsx  Sidebar.tsx  TitleBar.tsx
src/routes/: About.tsx  Downloads.tsx  DownloadsDetail.tsx  Extentions.tsx  Home.tsx  Inbox.tsx  InboxDetail.tsx  Logs.tsx  ParsedFileDetail.tsx  ParsedFiles.tsx  Settings.tsx  SitesConfig.tsx
src/store/: storageAdapter.ts  useParseStore.ts  useQueueStore.ts  useUIStore.ts
