[package]
name = "Synclime"
version = "0.3.0"
description = "GUI application for yt-dlp commandline downloader"
authors = ["AhmedTrooper"]
edition = "2021"

[lib]
name = "synclime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"
chrono = "0.4.44"

# 1. Fully-loaded Tokio runtime for multi-threaded async tasks and processes
tokio = { version = "1.52.3", features = ["full"] }

# 2. Native SQLite driver wrapper with bundled engine binaries (Eliminates OS environment errors)
rusqlite = { version = "0.40.0", features = ["bundled"] }
url = "2.5.8"
directories = "6.0.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
