[package]
name = "synclime"
version = "0.1.0"
description = "High-performance media extraction pipeline powered by yt-dlp, FFmpeg, and dynamic JS runtimes."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synclime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"
chrono = "0.4.44"
tokio = { version = "1.52.3", features = ["full"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
url = "2.5.8"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
reqwest = { version = "0.12.12", features = ["json"] }
directories = "6.0.0"
opener = "0.8.4"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
